some xml designs

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,161 +72,16 @@
     </androidx.cardview.widget.CardView>
 <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+      <include layout="@layout/new_launch"/>
+      <include layout="@layout/personal_loan"/>
+      <include layout="@layout/home_loan"/>
+<include layout="@layout/mutual_fund"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_marginLeft="15dp"
-                    android:layout_width="40sp"
-                    android:layout_height="35sp"
-                    android:padding="5dp"  android:background="@drawable/ic_hand_money_euro_coin_icon" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="23dp"
-                    android:layout_marginLeft="10dp"
-                    android:text="Personal Loan"
-                    android:textSize="24dp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="208dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_margin="10dp"
-                android:src="@drawable/personal_loan" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_marginLeft="15dp"
-                    android:layout_width="40sp"
-                    android:layout_height="35sp"
-                    android:padding="5dp"
-                    android:background="@drawable/ic_home_loan_icon" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="23dp"
-                    android:layout_marginLeft="10dp"
-                    android:text="Home Loan"
-                    android:textSize="24dp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="208dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_margin="10dp"
-                android:src="@drawable/home_loan" />
-
-           <androidx.constraintlayout.widget.ConstraintLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content">
-
-               <Button
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:background="@android:color/transparent"
-                   android:drawableTop="@drawable/ic_loan_icon_hand"
-                   android:text="Loan against \n property "
-                   android:textColor="@android:color/black"
-                   android:textSize="10dp"
-                   android:textAllCaps="false"
-                   app:layout_constraintEnd_toStartOf="@+id/button2"
-                   app:layout_constraintHorizontal_bias="0.474"
-                   app:layout_constraintStart_toEndOf="@+id/button"
-                   tools:layout_editor_absoluteY="0dp"
-                   tools:ignore="MissingConstraints" />
-
-               <Button
-                   android:id="@+id/button"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_marginStart="32dp"
-                   android:background="@android:color/transparent"
-                   android:drawableTop="@drawable/ic_home_care_icon"
-                   android:text="New home\n loan "
-                   android:textColor="@android:color/black"
-                   android:textSize="10dp"
-                   android:textAllCaps="false"
-                   app:layout_constraintStart_toStartOf="parent"
-                   tools:layout_editor_absoluteY="0dp"
-                   tools:ignore="MissingConstraints" />
-
-               <Button
-                   android:id="@+id/button2"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_marginEnd="28dp"
-                   android:background="@android:color/transparent"
-                   android:drawableTop="@drawable/ic_money_transactions_icon"
-                   android:text="Transfer existing \n loan "
-                   android:textAllCaps="false"
-                   android:textColor="@android:color/black"
-                   android:textSize="10dp"
-                   app:layout_constraintEnd_toEndOf="parent"
-                   tools:ignore="MissingConstraints"
-                   tools:layout_editor_absoluteY="0dp" />
-
-               />
-           </androidx.constraintlayout.widget.ConstraintLayout>
-        </LinearLayout>
-
-    </LinearLayout>
-    </LinearLayout>
+  </LinearLayout>
 </ScrollView>
 </LinearLayout>
