--- a/app/src/main/res/layout/new_launch.xml
+++ b/app/src/main/res/layout/new_launch.xml
@@ -72,6 +72,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:backgroundTint="#ff5632"
+                            android:id="@+id/GettingStartBtn"
                             android:text="Get Started"
                             android:textAllCaps="false"
                             app:layout_constraintBottom_toBottomOf="parent"
