--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,46 +8,13 @@
     tools:context=".MainActivity"
     >
 
-    <include
-        android:layout_marginTop="5dp"
-        android:id="@+id/include"
-        layout="@layout/hello_constent_layout"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
+<FrameLayout
+    android:layout_width="match_parent"
+    android:id="@+id/fragment_container"
+    android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
-        app:layout_constraintTop_toBottomOf="@+id/include">
+</FrameLayout>
 
-        <ScrollView
-            android:id="@+id/scrollView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
-            app:layout_constraintTop_toBottomOf="@+id/cardView">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <include layout="@layout/new_launch" />
-
-                <include layout="@layout/personal_loan" />
-
-                <include layout="@layout/home_loan" />
-
-                <include layout="@layout/mutual_fund" />
-
-            </LinearLayout>
-        </ScrollView>
-    </LinearLayout>
   <include layout="@layout/bottam_manu"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
