--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,13 +8,20 @@
     tools:context=".MainActivity"
     >
 
+  <FrameLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/container"
+      android:layout_above="@+id/bottom_navigation">
 
-<FrameLayout
-    android:layout_width="match_parent"
-    android:id="@+id/fragment_container"
-    android:layout_height="wrap_content">
+  </FrameLayout>
 
-</FrameLayout>
+  <com.google.android.material.bottomnavigation.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/bottom_navigation"
+      app:menu="@menu/bottom_navigation_menu"
+      android:layout_alignParentBottom="true">
 
-  <include layout="@layout/bottam_manu"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+  </com.google.android.material.bottomnavigation.BottomNavigationView>
+</RelativeLayout>
