--- a/app/src/main/res/layout/mutual_fund.xml
+++ b/app/src/main/res/layout/mutual_fund.xml
@@ -36,7 +36,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Navi Mutual Fund"
+                    android:text="Mutual Fund"
                     android:textSize="18dp"
                     android:layout_marginLeft="5dp"
                     android:textColor="@color/black"
