--- a/app/src/main/res/drawable/health_card_bg.xml
+++ b/app/src/main/res/drawable/health_card_bg.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
 
-        <shape android:shape="oval">
-           <corners android:radius="20dp" />
-            <stroke android:width="1dp" android:color="@android:color/black" />
+        <shape android:shape="rectangle">
+           <corners android:radius="5dp" />
+            <stroke android:width="1dp" android:color="@color/appBackgroundDarkWhite" />
         </shape>
 
     </item>
