--- a/app/src/main/res/layout/cash_loan.xml
+++ b/app/src/main/res/layout/cash_loan.xml
@@ -28,6 +28,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="208dp"
+            android:id="@+id/caseLoanBanner"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:src="@drawable/personal_loan" />
