--- a/app/src/main/res/layout/mutual_fund.xml
+++ b/app/src/main/res/layout/mutual_fund.xml
@@ -47,6 +47,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="208dp"
+                android:id="@+id/mutualFundBanner"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_margin="10dp"
