--- a/app/src/main/res/layout/new_launch.xml
+++ b/app/src/main/res/layout/new_launch.xml
@@ -114,6 +114,11 @@
                 </LinearLayout>
 
                 <include layout="@layout/cash_loan"/>
+                <include
+                    layout="@layout/card_apply_now"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
