--- a/app/src/main/res/layout/permissionlayout.xml
+++ b/app/src/main/res/layout/permissionlayout.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:cardCornerRadius="15dp">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -224,13 +224,15 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:orientation="vertical">
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:onClick="welcomeHandler"
-            android:text="i agree"/>
-        <TextView
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/terms_and_conditions"
+                android:padding="10dp"
+                android:text="i agree" />
+
+            <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
