--- a/app/src/main/res/layout/lat_start_layout.xml
+++ b/app/src/main/res/layout/lat_start_layout.xml
@@ -1,28 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:background="#E41B1A1A"
-    android:layout_marginBottom="40dp"
-    android:gravity="center"
-    android:id="@+id/letStartPopup"
 
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@android:color/transparent"
+    android:layout_width="match_parent"
+    app:cardCornerRadius="15dp"
+    android:layout_height="wrap_content"
     >
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="15dp">
+
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:layout_gravity="center"
         android:padding="15dp"
@@ -176,10 +169,10 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="letStartHandler"
+        android:id="@+id/let_start"
+        android:onClick="clickLetStart"
         android:text="Lat's Start"/>
 </LinearLayout>
 </LinearLayout>
         </ScrollView>
     </androidx.cardview.widget.CardView>
-</LinearLayout>
