--- a/app/src/main/res/layout/permissionlayout.xml
+++ b/app/src/main/res/layout/permissionlayout.xml
@@ -1,20 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:background="#E41B1A1A"
-    android:layout_marginBottom="40dp"
-    android:gravity="center"
-    android:id="@+id/permissionPopUp"
 
-    >
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         app:cardCornerRadius="15dp">
     <LinearLayout
         android:orientation="vertical"
@@ -35,9 +25,11 @@
         android:textSize="24dp"
         android:textColor="@color/black"
         android:layout_marginBottom="20dp"
-        android:text="@string/we_need_a_few_permission"
+        android:text="@string/we_need_few_permission"
         />
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -211,6 +203,7 @@
             android:orientation="horizontal">
          <androidx.appcompat.widget.AppCompatCheckBox
              android:layout_width="30dp"
+             android:id="@+id/permissionCheckBox"
              android:layout_height="30dp"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -230,6 +223,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/terms_and_conditions"
                 android:padding="10dp"
+                android:onClick="clickAgree"
                 android:text="i agree" />
 
             <TextView
@@ -243,7 +237,6 @@
         </LinearLayout>
 
     </LinearLayout>
-
+</ScrollView>
 </LinearLayout>
     </androidx.cardview.widget.CardView>
-</LinearLayout>
