--- a/app/src/main/res/layout/permissionlayout.xml
+++ b/app/src/main/res/layout/permissionlayout.xml
@@ -201,10 +201,13 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:orientation="horizontal">
-         <androidx.appcompat.widget.AppCompatCheckBox
-             android:layout_width="30dp"
-             android:id="@+id/permissionCheckBox"
-             android:layout_height="30dp"/>
+
+            <CheckBox
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:onClick="isCheckedPermission"
+                android:id="@+id/permissionCheckBox"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
