--- a/app/src/main/res/layout/register_part_one.xml
+++ b/app/src/main/res/layout/register_part_one.xml
@@ -52,7 +52,16 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:entries="@array/gender" />
-
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/enter_date_of_birth" />
+            <EditText
+                android:id="@+id/inpDob"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="30-12-1999"
+                android:inputType="textEmailAddress" />
             <Button
                 android:id="@+id/registerBtn"
                 android:layout_width="match_parent"
