--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -59,7 +59,7 @@ android:textColor="#8BC34A"
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:gravity="center"
-
+android:onClick="studentLoan"
             android:layout_marginBottom="10dp"
             android:background="@drawable/cat_item_bg"
             android:orientation="horizontal">
@@ -88,7 +88,7 @@ android:textColor="#8BC34A"
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:gravity="center"
-
+android:onClick="bankLoan"
             android:layout_marginBottom="10dp"
             android:background="@drawable/cat_item_bg"
             android:orientation="horizontal">
@@ -114,9 +114,9 @@ android:textColor="#8BC34A"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
-
             android:layout_marginBottom="10dp"
             android:gravity="center"
+            android:onClick="insurance"
             android:background="@drawable/cat_item_bg"
             android:orientation="horizontal">
 
